--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "comicstore",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,9 +17,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "tailwind-merge": "^2.3.0"
+    "react-paginate": "^8.2.0",
+    "sharp": "^0.33.4",
+    "tailwind-merge": "^2.3.0",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
